# cpp2rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  benchmark.py  justfile  symbols.txt  synthesize.py  test.rs
data/: cpp.txt  (+1 more)
preprocessor/: Cargo.toml  README.md
preprocessor/src/: cpp_ast.rs  extract.rs  lib.rs  literal_builder.rs
preprocessor/test_inputs/: assigned_null.cpp  control_flow.cpp  literals.cpp  minimal_class.cpp  new_delete_ptr.cpp  nullable_ptr.cpp  pointer_init_tag_demo.cpp
preprocessor/test_outputs/: add_one.tree.txt  dot_product_cpp.json  dot_product_rust_mapped.json  extracted_batch.json  extracted_with_null_notes.json  hello_main.tree.txt  literals.tree.txt  minimal_class.tree.txt  new_delete_ptr_cpp.json  new_delete_ptr_rust_mapped.json  nullable_ptr_cpp.json  nullable_ptr_rust_mapped.json  pointer_init_tag_demo_cpp.json  pointer_init_tag_demo_rust_mapped.json  reverse_cpp.json  reverse_rust_mapped.json
preprocessor/tests/: parse_fixtures.rs
synthesizer/: CLAUDE.md  Cargo.toml  ast_nodes.py  canonicalize.py  codegen.py  evaluator.py  expander.py  grammar.py  heuristics.py  loader.py  worklist.py
synthesizer/dataset/: abs_val.json  add_one.json  clamp.json  deref_add.json  deref_double.json  deref_gt.json  is_even.json  is_positive.json  max_two.json  min_two.json  negate.json  opt_double_or_zero.json  opt_is_positive.json  opt_or_default.json  square.json  sum_three.json
synthesizer/dataset0/: add_one.json  clamp.json  deref_add.json  deref_double.json  deref_gt.json  is_positive.json  min_two.json  negate.json  opt_double_or_zero.json  (+1 more)
(+285 files in other folders)
