[package]
name = "rust_synthesizer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "synth"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"
